# minimal-google-calendar-schedule

./: .gitignore  README.md  calendar-minimal.py  calendars2.py  pyproject.toml
